--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "openai": "^3.2.1",
+    "next": "^13.4.9-canary.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-media-recorder": "^1.6.6",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.13.11",
     "typescript": "5.0.4"
   },
   "devDependencies": {
