--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "formik": "^2.4.2",
     "next": "^13.4.9-canary.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
